[tool.poetry]
name = "asyncio-project"
version = "0.1.0"
description = ""
authors = ["Ilyas Rashitov <rashtv.19@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asyncio = "^3.4.3"
httpx = "^0.27.2"
aiohttp = "^3.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
