[tool.poetry]
name = "asyncio-project"
version = "0.1.0"
description = ""
authors = ["Ilyas Rashitov <rashtv.19@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asyncio = "^3.4.3"
aiohttp = "^3.11.2"
asyncpg = "^0.30.0"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
